# Cube

./: Cargo.toml  README.md
src/: main.rs
src/shader/: vertex.glsl
src/shader/colored/: fragment.glsl
src/shader/textured/: fragment.glsl  vertex.glsl
